# Kurata-2005-EularMethod

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
data/: cut.sh  in  in.org
src/: currents.c  eventloop.c  exptable.c  input_para.c  krt.c  mem.c  syspara.h  system.c  val_constants.c
